Table width fix on mobile

--- a/src/_assets/css/styles.css
+++ b/src/_assets/css/styles.css
@@ -513,6 +513,9 @@ span.metric {
     .decal {
       margin: 2rem 0;
     }
+    table {
+      width:100%;
+    }
 }
 
 @media screen and (min-width: 1280px) {
